# second-opinion

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  action.yml  entrypoint.sh  pyproject.toml
.github/: dependabot.yml  review-guidance.md
.github/workflows/: claude-code-review.yml  claude.yml  second-opinion.yml  test.yml
deploy/: .env.example  docker-compose.yml
examples/: second-opinion.yml
second_opinion/: __init__.py  bootstrap.py  eval.py  providers.py  review.py  run.py
tests/: test_bootstrap.py  test_eval.py  test_review.py  test_run.py
