[project]
name = "second-opinion"
version = "0.1.0"
description = "Independent, agentic second-opinion PR reviewer (OpenRouter or a local llama-server)"
requires-python = ">=3.11"
dependencies = ["requests>=2.28"]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
second-opinion = "second_opinion.run:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["second_opinion"]
